Added static-server dependency, fixed local test server launch.

--- a/copy_to_build/public/404.html
+++ b/copy_to_build/public/404.html
@@ -6,19 +6,19 @@
   <meta name='application-name' content='Zeitβ|³'/>
   <meta name='theme-color'      content='#00aba9'/>
   <meta name='background-color' content='#ffffff'/>
-  <link rel='shortcut icon' type='image/x-icon'  href='/favicon.ico?v=1'                sizes='16x16 24x24 32x32 48x48 64x64'/>
-  <link rel='icon'          type='image/x-icon'  href='/favicon128.ico?v=1'             sizes='16x16 24x24 32x32 48x48 64x64 128x128'/>
-  <link rel='icon'          type='image/x-icon'  href='/favicon256.ico?v=1'             sizes='16x16 24x24 32x32 48x48 64x64 128x128 256x256'/>
-  <link rel='icon'          type='image/png'     href='/favicon-36x36.png?v=1'          sizes='36x36'/>
-  <link rel='icon'          type='image/png'     href='/favicon-48x48.png?v=1'          sizes='48x48'/>
-  <link rel='icon'          type='image/png'     href='/favicon-72x72.png?v=1'          sizes='72x72'/>
-  <link rel='icon'          type='image/png'     href='/favicon-96x96.png?v=1'          sizes='96x96'/>
-  <link rel='icon'          type='image/png'     href='/android-chrome-192x192.png?v=1' sizes='192x192'/>
-  <link rel='icon'          type='image/png'     href='/android-chrome-194x194.png?v=1' sizes='194x194'/>
-  <link rel='icon'          type='image/png'     href='/android-chrome-256x256.png?v=1' sizes='256x256'/>
-  <link rel='icon'          type='image/png'     href='/android-chrome-512x512.png?v=1' sizes='512x512'/>
-  <link rel='icon'          type='image/png'     href='/logo-1024x1024.png?v=1'         sizes='1024x1024'/>
-  <link rel='icon'          type='image/svg+xml' href='/logo-1024x1024.svg?v=1'         sizes='1024x1024'/>
+  <link rel='shortcut icon' type='image/x-icon'  href='/favicon.ico'                sizes='16x16 24x24 32x32 48x48 64x64'/>
+  <link rel='icon'          type='image/x-icon'  href='/favicon128.ico'             sizes='16x16 24x24 32x32 48x48 64x64 128x128'/>
+  <link rel='icon'          type='image/x-icon'  href='/favicon256.ico'             sizes='16x16 24x24 32x32 48x48 64x64 128x128 256x256'/>
+  <link rel='icon'          type='image/png'     href='/favicon-36x36.png'          sizes='36x36'/>
+  <link rel='icon'          type='image/png'     href='/favicon-48x48.png'          sizes='48x48'/>
+  <link rel='icon'          type='image/png'     href='/favicon-72x72.png'          sizes='72x72'/>
+  <link rel='icon'          type='image/png'     href='/favicon-96x96.png'          sizes='96x96'/>
+  <link rel='icon'          type='image/png'     href='/android-chrome-192x192.png' sizes='192x192'/>
+  <link rel='icon'          type='image/png'     href='/android-chrome-194x194.png' sizes='194x194'/>
+  <link rel='icon'          type='image/png'     href='/android-chrome-256x256.png' sizes='256x256'/>
+  <link rel='icon'          type='image/png'     href='/android-chrome-512x512.png' sizes='512x512'/>
+  <link rel='icon'          type='image/png'     href='/logo-1024x1024.png'         sizes='1024x1024'/>
+  <link rel='icon'          type='image/svg+xml' href='/logo-1024x1024.svg'         sizes='1024x1024'/>
   <title>Zeitᵦ|³: UTC-Online Zeit™ Now™ / GitHub™ deployment</title>
   <style>
    .cont_ext {
